# django-settings-toml

./: .travis.yml  README.rst  REDAME.rst  django_settings_toml.py  settings.py  setup.cfg  setup.py  test_django_settings_toml.py  tox.ini
.github/: main.workflow
