[metadata]
name = django-settings-toml
version = file: VERSION
author = Abhilash Raj
author_email = maxking@asynchronous.in
description = Django settings using TOML configuration files.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2.0
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3

[options]
setup_requires =
    setuptools
install_requires =
    toml
    importlib-resources
packages = find:
