[metadata]
name = django-settings-toml
author = Abhilash Raj
author_email = maxking@asynchronous.in
description = Django settings using TOML configuration files.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2.0
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License

[options]
setup_requires =
    setuptools
    setuptools-scm
install_requires =
    toml
    importlib-resources
test_requires =
    pytest
packages = find:
